Added controllers, routes and service for user
