# src/routes/index.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 import OrderRoutes from "./order.route";
 import AnalyticsRoutes from "./analytics.route";
+import UserRoutes from "./user.route";
 const routes = Router();
 
 routes.get("/", (req, res) => {
@@ -9,5 +10,6 @@ routes.get("/", (req, res) => {
 
 routes.use("/orders", OrderRoutes);
 routes.use("/analytics", AnalyticsRoutes);
+routes.use("/users", UserRoutes);
 
 export default routes;
